--- a/exoplanet_data_analysis.ipynb
+++ b/exoplanet_data_analysis.ipynb
@@ -2,39 +2,39 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Datová analýza exoplanetárního datasetu</h1>\n",
     "## Semestrální práce z předmětu 4ST101\n",
     "### *Autor: Jakub Vítovec*"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 1. Charakteristika zpracovávaných dat.\n",
     "Ve své semestrální práci se budu zabývat daty získanými z veřejné databáze [Keggle](https://www.kaggle.com/). Konkrétní dataset je dostupný na URL [https://www.kaggle.com/datasets/sathyanarayanrao89/nasa-exoplanetary-system](https://www.kaggle.com/datasets/sathyanarayanrao89/nasa-exoplanetary-system) a byl vytvořen uživatelem Sathyanarayan Rao z dat publikovaných vesmírnou agenturou NASA. Celkem se v datasetu nachází 32552 různých dosud objevených exoplanet a základní data o nich.\n",
     "Exoplaneta je planeta, která obíhá okolo jiné hvězdy, než okolo Slunce. První exoplaneta byla objevena v roce 1998 a počet jejich počet stále roste."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Čištění dat\n",
     "V tomto oddíle vyčistíme data od nežádoucích hodnot."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-29T15:33:16.068667Z",
+     "start_time": "2023-05-29T15:33:15.902477700Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -149,65 +149,125 @@
     "\n",
     "dataset = pd.read_csv(\"./exoplanets_dataset.csv\");\n",
     "dataset.info()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-29T14:49:18.492117900Z",
-     "start_time": "2023-05-29T14:49:18.247693600Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Jak vidíme dataset obsahuje značné množství nepojmenovaných sloupců - Unnamed. Ty z datasetu odstraníme jako první."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-29T15:33:16.131705900Z",
+     "start_time": "2023-05-29T15:33:16.114106200Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for column_name in dataset.columns:\n",
+    "    if (\"Unnamed\" in column_name):\n",
+    "        del dataset[column_name];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jako další by bylo vhodné zkontrolovat počty chybějících hodnot v jednotlivých sloupcích."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-29T15:33:16.144927700Z",
+     "start_time": "2023-05-29T15:33:16.137688300Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 32552 entries, 0 to 32551\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column                                   Non-Null Count  Dtype  \n",
-      "---  ------                                   --------------  -----  \n",
-      " 0   Planet Name                              32552 non-null  object \n",
-      " 1   Host Name                                32552 non-null  object \n",
-      " 2   Number of Stars                          32552 non-null  int64  \n",
-      " 3   Number of Planets                        32552 non-null  int64  \n",
-      " 4   Discovery Method                         32552 non-null  object \n",
-      " 5   Discovery Year                           32552 non-null  int64  \n",
-      " 6   Discovery Facility                       32552 non-null  object \n",
-      " 7   Orbital Period [days]                    29747 non-null  float64\n",
-      " 8    Planet Radius [Earth Radius]            22711 non-null  float64\n",
-      " 9   Planet Mass or Mass*sin(i) [Earth Mass]  4699 non-null   float64\n",
-      " 10   Eccentricity                            16650 non-null  float64\n",
-      "dtypes: float64(4), int64(3), object(4)\n",
-      "memory usage: 2.7+ MB\n"
+      "Planet Name                                    0\n",
+      "Host Name                                      0\n",
+      "Number of Stars                                0\n",
+      "Number of Planets                              0\n",
+      "Discovery Method                               0\n",
+      "Discovery Year                                 0\n",
+      "Discovery Facility                             0\n",
+      "Orbital Period [days]                       2805\n",
+      " Planet Radius [Earth Radius]               9841\n",
+      "Planet Mass or Mass*sin(i) [Earth Mass]    27853\n",
+      " Eccentricity                              15902\n",
+      "dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "for column_name in dataset.columns:\n",
-    "    if (\"Unnamed\" in column_name):\n",
-    "        del dataset[column_name]"
-   ],
+    "print(dataset.isnull().sum());"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nejvíce chybějících hodnot se nachází ve sloupcích Planet Mass or Mass*sin(i), Eccentricity a Planet Radius, které obsahují hmotnost planety, ekcentricitu její oběžné dráhy a jejich poloměr. Vzhledem k tomu, že značná část těchto dat nám chybí, tak nebudeme tyto hodnoty využívat a sloupce odstraníme."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-29T14:58:03.018268300Z",
-     "start_time": "2023-05-29T14:58:02.952136100Z"
+     "end_time": "2023-05-29T15:33:16.205826100Z",
+     "start_time": "2023-05-29T15:33:16.150911500Z"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "columns_to_delte = [\" Planet Radius [Earth Radius]\", \"Planet Mass or Mass*sin(i) [Earth Mass]\",  \" Eccentricity\"]\n",
+    "\n",
+    "for column_name in dataset.columns:\n",
+    "    if (column_name in columns_to_delte):\n",
+    "        del dataset[column_name];"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jako další odstraníme z datasetu duplikované hodnoty."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-29T15:33:16.213813300Z",
+     "start_time": "2023-05-29T15:33:16.175096Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted duplicate values: 11305\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Deleted duplicate values: \" + str(dataset.duplicated().sum()));\n",
+    "dataset.drop_duplicates();"
+   ]
   },
   {
    "cell_type": "markdown",
