Added variable descriptions

--- a/exoplanet_data_analysis.ipynb
+++ b/exoplanet_data_analysis.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## 1. Charakteristika zpracovávaných dat.\n",
     "Ve své semestrální práci se budu zabývat daty získanými z veřejné databáze [Keggle](https://www.kaggle.com/). Konkrétní dataset je dostupný na URL [https://www.kaggle.com/datasets/sathyanarayanrao89/nasa-exoplanetary-system](https://www.kaggle.com/datasets/sathyanarayanrao89/nasa-exoplanetary-system) a byl vytvořen uživatelem Sathyanarayan Rao z dat publikovaných vesmírnou agenturou NASA. Celkem se v datasetu nachází 32552 různých dosud objevených exoplanet a základní data o nich.\n",
-    "Exoplaneta je planeta, která obíhá okolo jiné hvězdy, než okolo Slunce. První exoplaneta byla objevena v roce 1998 a počet jejich počet stále roste."
+    "Exoplaneta je planeta, která obíhá okolo jiné hvězdy, než okolo Slunce. První exoplaneta byla objevena v roce 1998 a počet jejich počet stále roste. Ve své semestrální práci bych se rád zaměřil na trend růstu či poklesu počtu objevených nových exoplanet."
    ]
   },
   {
@@ -271,6 +271,25 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "Po odstranění sloupců se značným počtem chybějících hodnot nám v datasetu zůstaly následující proměnné:\n",
+    "- **Planet Name** - Obsahuje jméno dané exoplanety\n",
+    "- **Host Name** - Jméno hostující hvězdy\n",
+    "- **Number of Stars** - Počer hvězd v planetárním systému dané exoplanety (u Země 1)\n",
+    "- **Number of Planets** - Počet planet v planetárním systému dané exoplanety (u Země 8)\n",
+    "- **Discovery Method** - Způsob objevení planety\n",
+    "- **Discovery Year** - Rok objevení planety\n",
+    "- **Discovary Facility** - Zařízení, které objevilo danou planetu\n",
+    "- **Orbital Period** - Orbitální perioda, doba v letech, za kterou planeta oběhne svou hostující hvězdu (Host Name)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
