--- a/exoplanet_data_analysis.ipynb
+++ b/exoplanet_data_analysis.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Charakteristika zpracovávaných dat.\n",
+    "## Charakteristika zpracovávaných dat.\n",
     "Ve své semestrální práci se budu zabývat daty získanými z veřejné databáze [Keggle](https://www.kaggle.com/). Konkrétní dataset je dostupný na URL [https://www.kaggle.com/datasets/sathyanarayanrao89/nasa-exoplanetary-system](https://www.kaggle.com/datasets/sathyanarayanrao89/nasa-exoplanetary-system) a byl vytvořen uživatelem Sathyanarayan Rao z dat publikovaných vesmírnou agenturou NASA. Celkem se v datasetu nachází 32552 různých dosud objevených exoplanet a základní data o nich.\n",
     "Exoplaneta je planeta, která obíhá okolo jiné hvězdy, než okolo Slunce. První exoplaneta byla objevena v roce 1998 a počet jejich počet stále roste. Ve své semestrální práci bych se rád zaměřil na trend růstu či poklesu počtu objevených nových exoplanet."
    ]
@@ -33,7 +33,8 @@
     "ExecuteTime": {
      "end_time": "2023-05-29T15:33:16.068667Z",
      "start_time": "2023-05-29T15:33:15.902477700Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -271,6 +272,7 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Po odstranění sloupců se značným počtem chybějících hodnot nám v datasetu zůstaly následující proměnné:\n",
     "- **Planet Name** - Obsahuje jméno dané exoplanety\n",
@@ -281,19 +283,37 @@
     "- **Discovery Year** - Rok objevení planety\n",
     "- **Discovary Facility** - Zařízení, které objevilo danou planetu\n",
     "- **Orbital Period** - Orbitální perioda, doba v letech, za kterou planeta oběhne svou hostující hvězdu (Host Name)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Teoretická část\n",
+    "V této části se zaměřím na statistické veličiny, které budou použity k analýze našeho datového souboru.\n",
+    "Jako základní veličinu míry polohy použijeme aritmetický průměr. Náš soubor obsahuje jak spojité, tak diskrétní náhodné veličiny. Ačkoliv jsou spojité fyzikální veličiny při reálných měřeních často interpretovány jako diskrétní, vzhledem k tomu, že rozptyl u planetárních měření je zpravidla podstatně větší, než nejmenší rozlišitelná hodnota, tak bude vhodné tuto veličinu považovat za spojitou.\n",
+    "\n",
+    "- Aritmetický průměr spojité náhodné veličiny *E(x)* spočítáme jako:\n",
+    "$$E(x)=\\int_{D(f)}xf(x)dx$$\n",
+    "\n",
+    "- Aritmetický průměr diskrétní náhodné veličiny *E(x)* spočítáme jako:\n",
+    "$$E(x)=1/N\\displaystyle\\sum\\limits_{i=0}^N x_{i}$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": []
   }
  ],
  "metadata": {
