--- a/exoplanet_data_analysis.ipynb
+++ b/exoplanet_data_analysis.ipynb
@@ -454,33 +454,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Jak vidíme je i tato hodnota značná potvrzuje nám naši doměnku."
+    "Jak vidíme je i tato hodnota značná potvrzuje nám naši doměnku. Z výše uvedené statistiky nám je jasné, jak veliký význam měla mise Kepler pro objevování nových exoplanet. Pokud se však budeme chtít zaměřit i na analýzu dat a hledání trendů u jiných zařízení, bude třeba se zaměřit se na data ostatních zařízení. Za tímto účelem sestavíme krabicový graf pěti"
    ],
    "metadata": {
     "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [],
-   "source": [
-    "except_kepler = dataset.loc[~((dataset[\"Discovery Facility\"] == \"Kepler\" ) | (dataset[\"Discovery Facility\"] == \"K2\"))];\n",
-    "except_kepler = except_kepler.groupby(\"Discovery Facility\")[\"Discovery Year\"].count().sort_values().tail().reset_index();\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-03T21:48:09.798321500Z",
-     "start_time": "2023-06-03T21:48:09.768465900Z"
-    }
    }
   },
   {
@@ -497,12 +474,13 @@
     }
    ],
    "source": [
+    "except_kepler = dataset.loc[~((dataset[\"Discovery Facility\"] == \"Kepler\" ) | (dataset[\"Discovery Facility\"] == \"K2\"))];\n",
+    "except_kepler = except_kepler.groupby(\"Discovery Facility\")[\"Discovery Year\"].count().sort_values().tail().reset_index();\n",
     "boxplot_data = pd.DataFrame();\n",
     "for facility_name in except_kepler[\"Discovery Facility\"]:\n",
     "    selected_facility_data = dataset.loc[dataset[\"Discovery Facility\"] == facility_name];\n",
     "    selected_facility_frequency = selected_facility_data.groupby(\"Discovery Year\").agg(Frequency=('Planet Name', 'count')).reset_index()\n",
     "    boxplot_data[facility_name] = selected_facility_frequency[\"Frequency\"]\n",
-    "\n",
     "boxplot_data.boxplot();\n",
     "plt.title(\"Graf 2: \\nKrabicový graf počtu exoplanet objevených v jednotlivých letech významnými zařízeními mimo Kepler\")\n",
     "plt.ylabel(\"Počet objevených planet\")\n",
