--- a/exoplanet_data_analysis.ipynb
+++ b/exoplanet_data_analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Datová analýza exoplanetárního datasetu>\n",
+    "# Datová analýza exoplanetárního datasetu\n",
     "## Semestrální práce z předmětu 4ST101\n",
     "### *Autor: Jakub Vítovec*"
    ]
@@ -15,7 +15,9 @@
    "source": [
     "## Úvod\n",
     "Ve své semestrální práci se budu zabývat daty získanými z veřejné databáze [Keggle](https://www.kaggle.com/). Konkrétní dataset je dostupný na URL [https://www.kaggle.com/datasets/sathyanarayanrao89/nasa-exoplanetary-system](https://www.kaggle.com/datasets/sathyanarayanrao89/nasa-exoplanetary-system) a byl vytvořen uživatelem Sathyanarayan Rao z dat publikovaných vesmírnou agenturou NASA. Celkem se v datasetu nachází 32552 různých dosud objevených exoplanet a základní data o nich.\n",
-    "Exoplaneta je planeta, která obíhá okolo jiné hvězdy, než okolo Slunce. První exoplaneta byla objevena v roce 1998 a počet jejich počet stále roste. Ve své semestrální práci bych se rád zaměřil na trend růstu či poklesu počtu objevených nových exoplanet a zapojení různých vědeckých zařízení při jejich objevování."
+    "Exoplaneta je planeta, která obíhá okolo jiné hvězdy, než okolo Slunce. První exoplaneta byla objevena v roce 1998 a jejich počet stále roste. Ve své semestrální práci bych se rád zaměřil na trend růstu či poklesu počtu objevených nových exoplanet a zapojení různých vědeckých zařízení při jejich objevování. Pokusím se zodpovědět na otázky:\n",
+    "- Jaký je trend vývoje počtu nově objevených exoplanet?\n",
+    "- Můžeme na základě těchto dat tento trend blíže popsat?"
    ]
   },
   {
@@ -81,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jak vidíme dataset obsahuje značné množství nepojmenovaných sloupců - Unnamed. Ty z datasetu odstraníme jako první."
+    "Jak vidíme, dataset obsahuje značné množství nepojmenovaných sloupců - Unnamed. Ty z datasetu odstraníme jako první."
    ]
   },
   {
@@ -144,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nejvíce chybějících hodnot se nachází ve sloupcích Planet Mass or Mass*sin(i), Eccentricity a Planet Radius, které obsahují hmotnost planety, ekcentricitu její oběžné dráhy a jejich poloměr. Vzhledem k tomu, že značná část těchto dat nám chybí, tak nebudeme tyto hodnoty využívat a sloupce odstraníme."
+    "Nejvíce chybějících hodnot se nachází ve sloupcích Planet Mass or Mass*sin(i), Eccentricity a Planet Radius, které obsahují hmotnost planety, ekcentricitu její oběžné dráhy a jejich poloměr. Vzhledem k tomu, že značná část těchto dat nám chybí, nebudeme tyto hodnoty využívat a sloupce odstraníme."
    ]
   },
   {
@@ -216,7 +218,7 @@
    "source": [
     "## Teoretická část\n",
     "V této části se zaměřím na statistické veličiny, které budou použity k analýze našeho datového souboru.\n",
-    "Jako základní veličinu míry polohy použijeme aritmetický průměr. Náš soubor obsahuje jak spojité, tak diskrétní náhodné veličiny. Ačkoliv jsou spojité fyzikální veličiny při reálných měřeních často interpretovány jako diskrétní, vzhledem k tomu, že rozptyl u planetárních měření je zpravidla podstatně větší, než nejmenší rozlišitelná hodnota, tak bude vhodné tuto veličinu považovat za spojitou.\n",
+    "Jako základní veličinu míry polohy použijeme aritmetický průměr. Náš soubor obsahuje jak spojité, tak diskrétní náhodné veličiny. Ačkoliv jsou spojité fyzikální veličiny při reálných měřeních často interpretovány jako diskrétní vzhledem k tomu, že rozptyl u planetárních měření je zpravidla podstatně větší, než nejmenší rozlišitelná hodnota, bude vhodné tuto veličinu považovat za spojitou.\n",
     "\n",
     "- Aritmetický průměr spojité náhodné veličiny *E(x)* spočítáme jako:\n",
     "$$E(x)=\\int_{D(f)}xf(x)dx$$\n",
@@ -224,7 +226,7 @@
     "- Aritmetický průměr diskrétní náhodné veličiny *E(x)* spočítáme jako:\n",
     "$$E(x)=1/N\\displaystyle\\sum\\limits_{i=0}^N x_{i}$$\n",
     "\n",
-    "Vzhledem k tomu, že jsme se rozhodli zkoumat tredy vývoje objevování nových planet, tak budeme potřebovat statistickou veličinu, kterou tento vývoj kvantifikujeme. K tomu je vhodné použít řetězové a bazické indexy. Pomocí nich můžeme snadno měřit růst či pokles dané veličiny mezi po sobě jdoucími obdobími nebo vůči nějakému základnímu období.\n",
+    "Vzhledem k tomu, že jsme se rozhodli zkoumat tredy vývoje objevování nových planet, budeme potřebovat statistickou veličinu, kterou tento vývoj kvantifikujeme. K tomu je vhodné použít řetězové a bazické indexy. Pomocí nich můžeme snadno měřit růst či pokles dané veličiny mezi po sobě jdoucími obdobími nebo vůči nějakému základnímu období.\n",
     "\n",
     "- Řetězový index růstu veličiny *x* spočítáme jako:\n",
     "$$I_{t-1}^{t}=\\frac{x_{t}}{x_{t-1}}$$\n",
@@ -303,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ze získaných hodnot je patrné, že variační koeficient je velice vysoký (přibližně 256%), tím pádem pro nás aritmetický průměr není vypovídající statistickou veličinou. Zároveň můžeme vypozorovat, že se maximum danového souboru nachází vysoko nad hodnotou třetího kvartilu, to nám indikuje, že exisuje několik málo roků, během kterých bylo objeveno neobvykle mnoho exoplanet. Abychom mohli vizuálně posoudit počty objevených planet v jednotlivých letech, vytvoříme histogram. Vzhledem k obrovskému variačnímu rozpětí souboru a vysokému variačnímu koeficientu bude na osu *y* znázorňující počet objevených planet vhodné použít logaritmické měřítko, díky němu bude mezi vzdálenými hodnotami graficky menší vzdálenost a celý graf bude přehlednější"
+    "Ze získaných hodnot je patrné, že variační koeficient je velice vysoký (přibližně 256%), tím pádem pro nás aritmetický průměr není vypovídající statistickou veličinou. Zároveň můžeme vypozorovat, že se maximum danového souboru nachází vysoko nad hodnotou třetího kvartilu, to nám indikuje, že existuje několik málo roků, během kterých bylo objeveno neobvykle mnoho exoplanet. Abychom mohli vizuálně posoudit počty objevených planet v jednotlivých letech, vytvoříme histogram. Vzhledem k obrovskému variačnímu rozpětí souboru a vysokému variačnímu koeficientu bude na osu *y* znázorňující počet objevených planet vhodné použít logaritmické měřítko, díky němu bude mezi vzdálenými hodnotami graficky menší vzdálenost a celý graf bude přehlednější."
    ]
   },
   {
@@ -344,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Z Grafu 1. lze vyčíst, že data vykazují poměrně přirozený, vizuálně až logaritmický růst, s výjimkou let 2014 a 2016, během kterých bylo objevenou 8822 a 12718 nových exoplanet. Z řetězových indexů můžeme snadno vyčíst meziroční růst 950% a 1600%. Počty objevené jenom v těchto dvou letech tvoří podstatnou část všech objevených exoplanet, proto nemůžeme tyto hodnoty ignorovat a pokusíme se zodpovědět, co stojí za těmito počty. Vytvoříme si dva nové DataFramy obsahující planety objevené v letech 2014 & 2016 a všechny ostatní, seskupíme je podle vědeckého zařízení, které je objevilo a nalezneme 5 nejvyšších hodnot."
+    "Z Grafu 1. lze vyčíst, že data vykazují poměrně přirozený, vizuálně až logaritmický růst, s výjimkou let 2014 a 2016, během kterých bylo objevenou 8822 a 12718 nových exoplanet. Z řetězových indexů můžeme snadno vyčíst meziroční růst 950% a 1600%. Počty objevené jenom v těchto dvou letech tvoří podstatnou část všech objevených exoplanet, proto nemůžeme tyto hodnoty ignorovat a pokusíme se zodpovědět, co stojí za těmito počty. Vytvoříme si dva nové DataFramy obsahující planety objevené v letech 2014 & 2016 a všechny ostatní, seskupíme je podle vědeckého zařízení, které je objevilo, a nalezneme 5 nejvyšších hodnot."
    ]
   },
   {
@@ -447,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jak vidíme je i tato hodnota značná potvrzuje nám naši doměnku. Z výše uvedené statistiky nám je jasné, jak veliký význam měla mise Kepler pro objevování nových exoplanet. Pokud se však budeme chtít zaměřit i na analýzu dat a hledání trendů u jiných zařízení, bude třeba se zaměřit se na data ostatních zařízení. Za účelem srovnání základních statistických veličin popisujících roční počty u nich objevených planet sestavíme krabicový graf z pěti nejúspěšnějších zařízení kromě Keplera."
+    "Jak vidíme, i tato značná hodnota nám potvrzuje naši doměnku. Z výše uvedené statistiky nám je jasné, jak veliký význam měla mise Kepler pro objevování nových exoplanet. Pokud se však budeme chtít zaměřit i na analýzu dat a hledání trendů u jiných zařízení, bude třeba se zaměřit se na data ostatních zařízení. Za účelem srovnání základních statistických veličin popisujících roční počty u nich objevených planet sestavíme krabicový graf z pěti nejúspěšnějších zařízení kromě Keplera."
    ]
   },
   {
@@ -548,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Z grafu je patrné, že mezi devíti nejaktivnějšími vědeckými zařízeními mají satelity nejmenší časový rozsah své působnosti. Všechny zmíněné satelity již ukončili svou činnost a tudíž data nejsou zkreslená faktem, že by byly modernější a jejich délka služby byla výrazně kratší, ovšem stále plynoucí. Naopak mnoho z observatoří jsou stále aktivní a produkují data. Vzhledem k tomu, že z Grafu 1 je patrné, že celé rozdělení nově objevovaných exoplanet nemá nějaké jasně definované rozdělení aproximovatelné matematickou funkcí a je silně ovlivňované počtem exoplanet objevených pomocí jednotlivých satelitů (zejm. Kepler). Můžeme si však položit otázku, zda rozdělení ročního počtu objevených exoplanet lze takto aproximovat například u observatoří nebo u satelitů."
+    "Z grafu je patrné, že mezi devíti nejaktivnějšími vědeckými zařízeními mají satelity nejmenší časový rozsah své působnosti. Všechny zmíněné satelity již ukončily svou činnost, a tudíž data nejsou zkreslená faktem, že by byly modernější a jejich délka služby byla výrazně kratší, ovšem stále plynoucí. Naopak mnoho z observatoří jsou stále aktivní a produkují data. Vzhledem k tomu, že z Grafu 1 je patrné, že celé rozdělení nově objevovaných exoplanet nemá nějaké jasně definované rozdělení aproximovatelné matematickou funkcí a je silně ovlivňované počtem exoplanet objevených pomocí jednotlivých satelitů (zejm. Kepler). Můžeme si však položit otázku, zda rozdělení ročního počtu objevených exoplanet lze takto aproximovat například u observatoří nebo u satelitů."
    ]
   },
   {
@@ -643,7 +645,7 @@
    "metadata": {},
    "source": [
     "## Závěr\n",
-    "Při zpracování dat se nám podařilo analyzovat trend vývoje počtu objevených exoplanet všemi zařízeními v datasetu a určit majoritní vliv mise Kepler na exoplanetární astronomii. Vývoj počtu objevených exoplanet jsme zároveň srovnali s normálním rozdělením a zjistili, že počty ročně objevených exoplanet s přibývajícím časem rostou. Při analýze ročních počtů objevených planet jinými zařízeními jsme našli zajímavou souvislost mezi variací dat a faktem, zda se jedná o observatoř či satelit. Na základě toho jsme vytvořili hypotézu, že observatoře objevují planety dlouhodobě s menší meziroční variabilitou, zatímco satelity je objevují impulzivně v kratším časovém období. Pro tento dataset se nám podařilo tuto hypotézu potvrdit, ovšem její univerzální užití by bylo vhodné podpořit více daty z budoucích výzkumů. Nakonec jsme došli k závěru, že na zálkadě dostupných dat nemůžeme určit rozdělení počtu ročně objevených planet u observatoří, zatímco u satelitů je pravděpodobné, že takové rozložení existuje a za určitých podmínek bychom s více daty mohli takovéto rozdělení aproximovat matematickou funkcí."
+    "Při zpracování dat se nám podařilo analyzovat trend vývoje počtu objevených exoplanet všemi zařízeními v datasetu a určit majoritní vliv mise Kepler na exoplanetární astronomii. Vývoj počtu objevených exoplanet jsme zároveň srovnali s normálním rozdělením a zjistili, že počty ročně objevených exoplanet s přibývajícím časem rostou. Při analýze ročních počtů objevených planet jinými zařízeními jsme našli zajímavou souvislost mezi variací dat a faktem, zda se jedná o observatoř či satelit. Na základě toho jsme vytvořili hypotézu, že observatoře objevují planety dlouhodobě s menší meziroční variabilitou, zatímco satelity je objevují impulzivně v kratším časovém období. Pro tento dataset se nám podařilo tuto hypotézu potvrdit, ovšem její univerzální užití by bylo vhodné podpořit více daty z budoucích výzkumů. Nakonec jsme došli k závěru, že na základě dostupných dat nemůžeme určit rozdělení počtu ročně objevených planet u observatoří, zatímco u satelitů je pravděpodobné, že takové rozložení existuje a za určitých podmínek bychom s více daty mohli takovéto rozdělení aproximovat matematickou funkcí."
    ]
   }
  ],
