--- a/exoplanet_data_analysis.ipynb
+++ b/exoplanet_data_analysis.ipynb
@@ -627,6 +627,21 @@
     "## Závěr\n",
     "Při zpracování dat se nám podařilo analyzovat trend vývoje počtu objevených exoplanet všemi zařízeními v datasetu a určit majoritní vliv mise Kepler na exoplanetární astronomii. Vývoj počtu objevených exoplanet jsme zároveň srovnali s normálním rozdělením a zjistili, že počty ročně objevených exoplanet s přibývajícím časem rostou. Při analýze ročních počtů objevených planet jinými zařízeními jsme našli zajímavou souvislost mezi variací dat a faktem, zda se jedná o observatoř či satelit. Na základě toho jsme vytvořili hypotézu, že observatoře objevují planety dlouhodobě s menší meziroční variabilitou, zatímco satelity je objevují impulzivně v kratším časovém období. Pro tento dataset se nám podařilo tuto hypotézu potvrdit, ovšem její univerzální užití by bylo vhodné podpořit více daty z budoucích výzkumů. Nakonec jsme došli k závěru, že na základě dostupných dat nemůžeme určit rozdělení počtu ročně objevených planet u observatoří, zatímco u satelitů je pravděpodobné, že takové rozložení existuje a za určitých podmínek bychom s více daty mohli takovéto rozdělení aproximovat matematickou funkcí."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Zdroje\n",
+    "- Boxplot. In: *Wikipedia: the free encyclopedia [online]*. San Francisco (CA): Wikimedia Foundation, 2001- [cit. 2023-06-04]. Dostupné z: https://cs.wikipedia.org/wiki/Boxplot\n",
+    "- Exoplanet exploration: Planets beyond our solar system. *Exoplanet exploration [online]*. 2023 [cit. 2023-06-04]. Dostupné z: https://exoplanets.nasa.gov/exoplanet-catalog/1237/corot-1-b/\n",
+    "- Richard Hindls et al. *Statistika v ekonomii.* První vydání. OCLC: 1066057734. Průhonice:\n",
+    "Professional Publishing, 2018. isbn: 97880882600\n",
+    "- Kepler space telescope. In: *Wikipedia: the free encyclopedia [online]*. San Francisco (CA): Wikimedia Foundation, 2001- [cit. 2023-06-04]. Dostupné z: https://en.wikipedia.org/wiki/Kepler_space_telescope\n",
+    "- *SciPy documentation [online]*. The SciPy community, 2023 [cit. 2023-06-04]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
